p2/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-3-ingress
spec:
  rules:
  - host: app-1.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-1-service
            port:
              number: 80
  - host: app-2.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-2-service
            port:
              number: 80
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-3-service
            port:
              number: 80
